# decomp-parsing-service

./: Dockerfile  README.md  analysisClient.py  cli.py  config.py  dataHandler.py  main.py  parsingServer.py  pyproject.toml  requirements.txt  setup.py  utils.py
analysis/: analysisClient.py  analysisJarClient.py  analysisLocalClient.py  dataClient.py
data_prod/petclinic/: calls.parquet  interactions.parquet  tfidf.parquet  word_count.parquet
data_prod/plants/: calls.parquet  interactions.parquet  tfidf.parquet  word_count.parquet
decparsing/: __init__.py  config.py  dataHandler.py  helpers.py  utils.py
decparsing/analysis/: __init__.py  analysisClient.py  analysisJarClient.py  analysisLocalClient.py  analysisRuntimeClient.py  dataClient.py
decparsing/models/: __init__.py
decparsing/models/analyze/: __init__.py
decparsing/models/analyze/v2/: analyze_pb2_grpc.py
decparsing/models/analyze/v3/: analyze_pb2.py  analyze_pb2_grpc.py
decparsing/models/parse/: __init__.py
decparsing/models/parse/v2/: parse_pb2.py  (+1 more)
decparsing/parsers/: __init__.py  semParser.py  structParser.py  tfidfTransformer.py
models/: __init__.py  analyze_pb2.py  analyze_pb2_grpc.py  parse_pb2.py  parse_pb2_grpc.py
models/analyze/v1/: analyze_pb2_grpc.py
models/analyze/v2/: analyze_pb2.py  analyze_pb2_grpc.py
models/parse/v2/: parse_pb2.py
parsers/: __init__.py  semParser.py  structParser.py  utils.py
protos/: parse.proto
protos/analyze/v1/: analyze.proto
protos/analyze/v2/: analyze.proto
protos/analyze/v3/: analyze.proto
protos/parse/v2/: parse.proto
